--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link rel="shortcut icon" type="image/png" href="https://www.facebook.com/messenger_media?attachment_id=986312762372701&message_id=mid.%24cAAAB8a-AEuOOfs73FGITYmlVVhM4&thread_id=100010907596564"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anniversary</title>
